replaced tabs with spaced, enhanced documentation, optimized wallfollow algorithm (drive.c)

--- a/README
+++ b/README
@@ -58,4 +58,4 @@ If you have any questions, feel free to contact us!
 
 ### What else we want to say ###
 
-This software was developed within like 4 years. Unfortunately, we only started using git in the last year. (Maybe we add our old software in an archive folder, that are some things one can really laugh about...). Many parts were rewritten after some time. It is really difficult to keep 10000 lines of code up to date. As we often had time pressure, we made things just to work! Today, we surely would make a few things different, but this repository also shows our learning process over time. Furthermore we should have used spaces instead of tabs (github makes one tab 8 spaces). Maybe we just replace them some time with spaces (thanks to the tabs that should work without problems). Simply append ?ts=4 to the raw file viewer in github if you want to change tab width.
+This software was developed within like 4 years. Unfortunately, we only started using git in the last year. (Maybe we add our old software in an archive folder). Many parts were rewritten after some time. It is really difficult to keep 10000 lines of code up to date. As we often had time pressure, we made things just to work! Today, we surely would make a few things different, but this repository also shows our learning process over time.
